--- a/config/locales/mongoid.zh-CN.yml
+++ b/config/locales/mongoid.zh-CN.yml
@@ -22,10 +22,18 @@ zh-CN:
         rating: 推荐指数
         published_at: 发布于
         icon: 小图标
-        logo: Logo
+        logo: logo
         banner: Banner
         full_screen: 大图
         articles_count: 文章
         videos_count: 视频
         photos_count: 图片
         downloads_count: 资源下载
+      article:
+        title: 标题
+        content: 内容
+        is_recommended: 推荐
+      topic_article:
+        category: 分类
+        author: 作者
+        source: 来源
