--- a/config/locales/mongoid.zh-CN.yml
+++ b/config/locales/mongoid.zh-CN.yml
@@ -8,6 +8,8 @@ zh-CN:
       topic_video: 专题视频
       topic_photo: 专题图片
       topic_download: 专题资源
+      bbs_board: 论坛板块
+      bbs_topic: 论坛帖子
     attributes:
       user:
         email: Email
@@ -44,3 +46,20 @@ zh-CN:
         topic_id: 专题
         widget: 视频嵌入代码
         url: 视频源地址
+      bbs_board:
+        name: 名称
+        admin: 版主
+        ancestry: 所属主板块
+        logo: Logo
+        description: 简介
+        admin_id: 版主
+        bbs_topics_count: 帖子数量
+      bbs_topic:
+        title: 标题
+        content: 内容
+        user_id: 发布人
+        user: 发布人
+        bbs_board: 板块
+        sticky: 置顶
+        is_recommended: 精华
+        created_at: 发布时间
