--- a/config/locales/mongoid.zh-CN.yml
+++ b/config/locales/mongoid.zh-CN.yml
@@ -26,6 +26,7 @@ zh-CN:
         remember_me: 记住我的登录信息
         current_password: 旧密码
         confirmed_at: 激活时间
+        avatar: 头像
       topic:
         title: 标题
         slug: 英文标识
