--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -102,7 +102,7 @@ zh-CN:
     format: ! '%{attribute} %{message}'
     messages:
       accepted: 必须是可被接受的
-      blank: 不能为空字符
+      blank: 此项必须填写
       confirmation: 与确认值不匹配
       empty: 不能留空
       equal_to: 必须等于 %{count}
