--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -1,6 +1,7 @@
 zh-CN:
   notifications:
     profile_updated: 您的个人信息已经成功更新！
+    fill_your_email: 请输入您的Email地址，以便成为正版吞迷。
   views:
     layout:
       sign_up: 新用户注册
