--- a/config/locales/mongoid.zh-CN.yml
+++ b/config/locales/mongoid.zh-CN.yml
@@ -66,7 +66,7 @@ zh-CN:
         logo: Logo
         description: 简介
         admin_id: 版主
-        bbs_topics_count: 帖子数量
+        bbs_posts_count: 帖子数量
         depth: 目录层次
       bbs_post:
         title: 标题
