add user profile page

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -193,4 +193,5 @@ zh-CN:
       default: ! '%Y年%b%d日 %A %H:%M:%S %Z'
       long: ! '%Y年%b%d日 %H:%M'
       short: ! '%b%d日 %H:%M'
+      cool: ! '%Y年%m月%d日'
     pm: 下午
