--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -14,7 +14,17 @@ zh-CN:
     bbs:
       follow_btn: <i class='icon-heart icon-white'></i>
       like: <i class='icon-heart'></i> 喜欢
+      up: <i class='icon-thumbs-up'></i> 喜欢
+      post_created_ago: 发起于%{ago}前
+      last_replied_by: |
+        最后由
+        <a href="%{url}">%{name}</a>
+        于%{ago}前回复
+      board: <span class="label">%{name}</span>
     auth:
       weibo: 新浪微博
       qq_connect: 腾讯微博
       douban: 豆瓣
+    pager:
+      prev: <i class='icon-chevron-left'></i> <span>上一页</span>
+      next: <span>下一页</span> <i class='icon-chevron-right'></i>
